--- a/templates/home/flames.html
+++ b/templates/home/flames.html
@@ -430,7 +430,7 @@ F.L.A.M.E.S🔥 | Angaar
                 <div class="skill-progress" style="position: relative; z-index: 1;">
                     <div style="display: flex; justify-content: space-between;">
                         <span style="color: #aaa; font-size: 14px;">By:</span>
-                        <span style="color: white; font-weight: 600; font-size: 14px;">{{ course.instructor }}🔥</span>
+                        <span style="color: white; font-weight: 600; font-size: 14px;">{{ course.get_all_instructors }}🔥</span>
                     </div>
                 </div>
 
