--- a/templates/home/flames_register.html
+++ b/templates/home/flames_register.html
@@ -349,7 +349,7 @@ Register for {{ course.title }} | F.L.A.M.E.S🔥 | Angaar
                 <h2 class="course-name">{{ course.title }}</h2>
                 <p class="course-subtitle">{{ course.subtitle }}</p>
                 <p style="color: #aaa; margin-top: 5px;">By: <span style="color: white; font-weight: 600;">
-                        {{ course.instructor }}🔥</span></p>
+                        {{ course.get_all_instructors }}🔥</span></p>
             </div>
         </div>
 
