--- a/templates/student/flames/course_detail.html
+++ b/templates/student/flames/course_detail.html
@@ -354,7 +354,7 @@ active
                     <i class="fas fa-user"></i>
                 </div>
                 <div>
-                    <div class="instructor-name">{{ course.instructor }}</div>
+                    <div class="instructor-name">{{ course.get_all_instructors }}</div>
                     <div class="instructor-role">Lead Instructor</div>
                 </div>
             </div>
