--- a/templates/home/course_detail.html
+++ b/templates/home/course_detail.html
@@ -560,7 +560,7 @@
                                 <i class="fas fa-user" style="font-size: 40px; color: white;"></i>
                             </div>
                             <div class="instructor-info">
-                                <h3>{{ course.instructor }}</h3>
+                                <h3>{{ course.get_all_instructors }}</h3>
                                 <p>Flower Nahi, Fire Hain Ye</p>
                             </div>
                         </div>
