updated flames on home page

--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -178,8 +178,8 @@
                         <a class="nav-link article-link" href="{% url 'articles' %}">Job Articles</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" style="text-decoration: underline; color: rgb(253, 135, 0);"
-                            href="{% url 'flames' %}">Summer Training🔥</a>
+                        <a class="nav-link" style="color: rgb(253, 135, 0);"
+                            href="{% url 'flames' %}">FLAMES '25🔥</a>
                     </li>
                     <!--  <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
