added gaurika only

--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -372,6 +372,7 @@ Our Team | Angaar
                     <p class="team-position">Co-Founder and Educator</p>
                     <div class="team-social">
                         <a href="https://www.linkedin.com/in/divyanshu-khandelwal-dkoder" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.instagram.com/iamblackorder/" class="social-icon"><i class="fab fa-instagram"></i></a>
                         <!-- <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a> -->
                     </div>
@@ -397,6 +398,78 @@ Our Team | Angaar
         </div>
 
         <!-- Rest of Team in Grid -->
+
+        <div class="team-grid">
+            <div class="team-card" data-category="design" data-aos="fade-up" data-aos-delay="100">
+                <div class="team-img-wrapper">
+                    <img class="team-img"
+                        src="{% static 'img/home/gauri.png' %}"
+                        alt="-">
+                </div>
+                <div class="team-card-content">
+                    <h3 class="team-name">Gaurika Dhingra</h3>
+                    <p class="team-position">Operations Team</p>
+                    <div class="team-social">
+                        <a href="https://www.linkedin.com/in/gaurika-dhingra/" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <!-- <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="team-card" data-category="design" data-aos="fade-up" data-aos-delay="200">
+                <div class="team-img-wrapper">
+                    <img class="team-img"
+                        src="https://media.licdn.com/dms/image/v2/D5603AQHNkZy8pXwVJA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1718273999260?e=1747267200&v=beta&t=kTRp7uu_umxDgyzg5zqkaY6vglPEVEPrzQTlssnTG-I"
+                        alt="Ishaan Khan">
+                </div>
+                <div class="team-card-content">
+                    <h3 class="team-name">Ishaan Khan</h3>
+                    <p class="team-position">Design Team</p>
+                    <div class="team-social">
+                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <!-- <a href="#" class="social-icon"><i class="fab fa-behance"></i></a>
+                        <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="team-card" data-category="technical" data-aos="fade-up" data-aos-delay="300">
+                <div class="team-img-wrapper">
+                    <img class="team-img"
+                        src="https://media.licdn.com/dms/image/v2/D5603AQGzRz0uCzlJWQ/profile-displayphoto-shrink_400_400/B56ZRAdNPXHIAk-/0/1736248187102?e=1747267200&v=beta&t=gxla4LY0jzX2_7YUtsfAe9WYEPoppSQw8FJAQmqSW9s"
+                        alt="Adwait Patel">
+                </div>
+                <div class="team-card-content">
+                    <h3 class="team-name">Adwait Patel</h3>
+                    <p class="team-position">Core Technical Team</p>
+                    <div class="team-social">
+                        <a href="https://www.linkedin.com/in/adp-pythondev" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <!-- <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+                        <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="team-card" data-category="technical" data-aos="fade-up" data-aos-delay="400">
+                <div class="team-img-wrapper">
+                    <img class="team-img"
+                        src="https://media.licdn.com/dms/image/v2/D4E03AQHECQIZzTZdCg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1713275914043?e=1747267200&v=beta&t=L-ge91Qwk0xEBOlnTuyaYdPl0pKTs_b4xL7FdVAf0TQ"
+                        alt="Shashank Upadhyay">
+                </div>
+                <div class="team-card-content">
+                    <h3 class="team-name">Shashank Upadhyay</h3>
+                    <p class="team-position">Core Technical Team</p>
+                    <div class="team-social">
+                        <a href="https://www.linkedin.com/in/shubhcoder0269" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <!-- <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+                        <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        {% comment %}
         <div class="team-grid">
             <div class="team-card" data-category="design" data-aos="fade-up" data-aos-delay="100">
                 <div class="team-img-wrapper">
@@ -466,6 +539,8 @@ Our Team | Angaar
                 </div>
             </div>
         </div>
+
+        {% endcomment %}
     </div>
 </div>
 
